[fix] background repeat on smaller screen

--- a/src/main/webapp/static/css/global.css
+++ b/src/main/webapp/static/css/global.css
@@ -169,7 +169,6 @@ html {
     height: 100%;
     background-color: #000000;
     background-image: radial-gradient(var(--background1), var(--background2)), url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
-    background-repeat: no-repeat;
     background-size: cover;
 }
 
